SAMZA-581; bump memory in samza-test to allow kv test to work